kubernetes/static-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-app
  template:
    metadata:
      labels:
        app: static-app
    spec:
      containers:
        - name: static-app
          image: docker.io/kuciniakuaim/bekom-static-app
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
                drop:
                    - ALL
          ports:
            - containerPort: 5000
              protocol: TCP
