kubernetes/task-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-app
  template:
    metadata:
      labels:
        app: task-app
    spec:
      containers:
        - name: task-app
          image: docker.io/tulski/bekom-demo-app:latest
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
                drop:
                    - ALL
          ports:
            - containerPort: 8080
              protocol: TCP
