kubernetes/static-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-app-service
  labels:
    app: static-app
spec:
  type: ClusterIP
  selector:
    app: static-app
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
