kubernetes/task-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-app-service
  labels:
    app: task-app
spec:
  type: ClusterIP
  selector:
    app: task-app
  ports:
    - name: https
      port: 443
      targetPort: 8080
      protocol: TCP
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
